--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -5,5 +5,7 @@ set(_SOURCES ${_SOURCES} PARENT_SCOPE)
 
 list(APPEND _INCLUDEDIRS
 	common
+	node_modules/libui-npm
 )
+
 set(_INCLUDEDIRS ${_INCLUDEDIRS} PARENT_SCOPE)
