--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,3 @@
-# 3 june 2016
-
 macro(_add_example _name)
 	_add_exec(${_name} ${ARGN})
 	# because Microsoft's toolchain is dumb
@@ -9,9 +7,15 @@ macro(_add_example _name)
 	endif()
 endmacro()
 
-_add_example(controlgallery
-	main.c
-	${_EXAMPLE_RESOURCES_RC}
+_add_example(rte
+	rte/main.c
 )
 
+list(APPEND _INCLUDEDIRS
+	examples/rte
+	node_modules/libui-npm
+)
 
+set(_INCLUDEDIRS ${_INCLUDEDIRS} PARENT_SCOPE)
+
+add_custom_target(examples DEPENDS rte)
